# handy.py

./: .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Pipfile  README.md  pylib.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  pre-commit.yml  test.yml
src/: __init__.py  _handy.py
src/handy/: __init__.py  _handy.py  decorators.py  net.py  re_pattern.py  re_tk.py
src/handy/net/: tcpserver.py
tests/: test_decorators.py  test_handy.py  test_net.py  test_pylib.py  test_re_pattern.py  test_tcpserver.py
