[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "handy-utils"
description = "Collection of handy utils for Python."
authors = [
    {name = "Li Yun", email = "leven.cn@gmail.com"},
]
readme = "README.md"
requires-python = "~=3.9"
license = {file = "LICENSE"}
maintainers = [
    {name = "Li Yun", email = "leven.cn@gmail.com"},
]
keywords = ["Python"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Typing :: Typed",
]
dependencies = [
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pre-commit",
    "black",
    "isort",
    "mymy",
    "flake8 >= 4.0",
    "pyupgrade",
    "pytest >= 7.1",
    "coverage >= 6.4",
    "pytest-cov >= 3.0",
]
doc = [
    "sphinx"
]

[project.urls]
Documentation = "https://github.com/leven-cn/handy.py"
Source = "https://github.com/leven-cn/handy.py"
Home = "https://github.com/leven-cn/handy.py"

[tool.flit.module]
name = "handy"

[tool.flit.sdist]
include = ["doc/"]
exclude = ["doc/*.html"]

[tool.black]
line-length = 88
target-version = ['py39']
skip-string-normalization = true
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/.github/workflows/*.yml
'''

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
exclude = [
    '^file1\.py$',  # TOML literal string (single-quotes, no escaping necessary)
    "^file2\\.py$",  # TOML basic string (double-quotes, backslash and other characters need escaping)
]

[tool.flake8]
max_complexity = 20
max-line-length = 88
benchmark = true

[tool.pytest.ini_options]
markers = [
]
addopts = [
    "--strict-markers",
    "--cov",
    "--cov-append",
    "--durations=5",
    "--durations-min=0.25",
]
norecursedirs = [
    ".git",
    ".*_cache",
    ".tox",
    "*.egg-info",
    "docs",
]

[tool.coverage.run]
parallel = true

[tool.coverage.report]
skip_empty = true
